Closed
Bug 58109
Opened 24 years ago
Closed 24 years ago
ABook: import can't handle Japanese address book filename correctly.
Categories
(MailNews Core :: Internationalization, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: ji, Assigned: m_kato)
Details
(Keywords: intl)
Attachments
(4 files)
****observed with win32 2000102609 branch build****
When importing a text/ldif/csv/tab address book file, if the filename is in Japanese, the Ja filename is displayed
garbled both on import wizard during the importing and main window after improting.
Steps to reproduce:
1. Export address book from 4.x and save it into a file with Japanese filename.
2. Launch Netscape 6 and bring up address book.
3. From address book, select File | Importing...
or from browser select Tasks | Tools | Import Utility
4. Select the file that you prepared at step 1 and import this file
5. At the last screen of improt wizard, the Ja filename is garbled.
And on address book list of main window, the Ja filename is garbled as well.
Will attach screenshots later.
Although the Ja address book filename appears garbled after importing, the
non-ASCII cards in it are displayed okay after importing.
Comment 6•24 years ago
|
||
ji, can you check to see if the same problem occurs when
you export a JPN named files from NS6 and then attempt
to import it back?
Comment 7•24 years ago
|
||
Question 2:
Did we check the migration case where original 4.x
ADBook files have Japanese names? Does that work OK?
There is no export function on Netscape 6 yet.
For ja ABook name migrated from 4.x, it works ok except it needs to restart the
browser to be able to show up.
For the default personal address book name which is translated into Japanese on
Japanese 4.x release, after migration, the original Japanese name is not kept.
English "Personal Address Book" is used.
I'll file a seperate bug for it.
Japanese Netscape 6 can migrate the default Ja personal address book name
correctly. So I won't file any additional bug related to this.
Assignee | ||
Comment 10•24 years ago
|
||
Assignee | ||
Comment 11•24 years ago
|
||
My fixess is 2 point.
o fix memory leak. (change char* -> nsXPIDLCString)
o misstake charset convertion (AssignWithConversion -> SystemStringToUnicode)
chuang, if you have no enough time, please assign to me.
Comment 12•24 years ago
|
||
reassigning to m_kato@ga2.so-net.ne.jp
It would be a big help if you could get this in.
Assignee: chuang → m_kato
Comment 14•24 years ago
|
||
r=nhotta
Comment 15•24 years ago
|
||
sr=bienvenu (though do you really need to cast to a (const char *)? Won't the
compiler figure it out?
Comment 16•24 years ago
|
||
sr=mscott
Comment 17•24 years ago
|
||
Mass change of QA contact to ji for the bugs filed by her.
QA Contact: momoi → ji
Assignee | ||
Comment 18•24 years ago
|
||
check in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 19•24 years ago
|
||
Verified with 02/19 linux and win32 mtrunk build.
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•