bug 58109 r=nhotta sr=bienvenu, mscott

o misstake charset convertion
o fix memory leak